--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,7 +10,53 @@
 }
 
 *{
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: Roboto;
+  color: #222831;
+  background-color: #F4F3F6;
+}
+
+.title-header{
+  color: #222831;
+  font-weight: 500;
+  text-align: center;
+  margin: 22px 0 22px 0;
+}
+
+.main-section{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.section-container{
+  background-color: #FAFBFC;
+  padding: 16px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+.newAssetBtn{
+  background-color: #1552F0;
+  color: white;
+  border-radius: 10px;
+  font-weight: 600;
+  width: 320px;
+  padding: 12px;
+  border: none;
+  cursor: pointer;
+}
+.newAssetBtn:hover{
+  filter: brightness(1.3);
+}
+.container-top{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 28px;
 }
