--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -21,11 +21,10 @@
 
 .modalContent {
     background: white; 
-    padding: 20px;
+    padding: 26px;
     border-radius: 8px; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     cursor: default; 
-    max-width: 500px;
-    width: 90%;
+    width: 500px;
     z-index: 10000; 
 }
