--- a/src/components/AssetForm/AssetForm.module.css
+++ b/src/components/AssetForm/AssetForm.module.css
@@ -15,11 +15,11 @@
     border-radius: 8px;
     padding: 4px;
     width: 180px;
-    margin-left: 6px;
 }
 .top{
     display: flex;
     flex-direction: column;   
+    justify-content: center;
 }
 #emailInput{
     width: 100%;
